apps/duplicati/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duplicati
  labels:
    app.kubernetes.io/name: duplicati
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: duplicati
  template:
    metadata:
      labels:
        app.kubernetes.io/name: duplicati
    spec:
      containers:
        - name: duplicati
          image: linuxserver/duplicati:latest
          ports:
            - name: http
              containerPort: 8200
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: backups
              mountPath: /backups
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: duplicati-config
        - name: backups
          persistentVolumeClaim:
            claimName: duplicati-backups
