apps/duplicati/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duplicati
  labels:
    app.kubernetes.io/name: duplicati
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8200
      targetPort: 8200
  selector:
    app.kubernetes.io/name: duplicati
