apps/duplicati/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: duplicati
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Duplicati
    gethomepage.dev/description: Backup Manager
    gethomepage.dev/group: Services
    gethomepage.dev/icon: duplicati
    gethomepage.dev/href: https://duplicati.cyphers.app
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`duplicati.cyphers.app`)
      middlewares:
        - name: authentik-auth
          namespace: authentik
        - name: default-headers
          namespace: traefik
      services:
        - name: duplicati
          namespace: duplicati
          port: 8200
  tls:
    secretName: production-cyphers-app-tls
